istio/virtual-service-image.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-image
  namespace: dev
spec:
  hosts:
  - "hello2.tsm.h2o-2-19271.h2o.vmware.com"
  gateways:
  - dev-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: hello-image
